# DolgorocnaOskrbaSlovenije

./: pyproject.toml
profili/: .gitignore  001_data_vhodni_podatki_za_model_latest.xlsx  ELES_2022.xlsx  ELES_2023.xlsx  ELES_2024.xlsx  ELES_celotni_odjem.py  ELES_povprecje.xlsx  ELES_povprecje2.xlsx  ELES_povprecje3.xlsx  ELES_povprecje4.xlsx  ELES_povprecje5.xlsx  ELES_vsi.py  Projekcije_raba_EE_IJS_v2_ag.xlsx  README.md  SeznamElektrarn_GEN_14052025.xlsx  SeznamElektrarn_vse_mk_nov.xlsx  drava_hourly_2025-2050.xlsx  drava_vodotok.xls  krka_vodotok.xls  mhe_2022.csv  mhe_2023.csv  mhe_2024.csv  mhe_normalized.py  mhe_normalized.xlsx  osvetljitev_celje.xlsx  parser_vhodni_podatki.py  poprecje_vodotokov.py  profil_STPE_BIOPLIN.py  profil_STPE_BIOPLIN_fun.py  profil_loss.py  profil_loss2.py  profil_loss_fun.py  profil_mhe.py  profil_mhe_fun.py  profil_ne_OVE.py  profil_ne_OVE_fun.py  profil_odjem_ELES.py  profil_odjem_ELES2.py  profil_odjem_ELES_fun.py  profil_polnilnic.py  (+24 more)
src/o32_dolgorocnaoskrbaslovenije_maj25/: main.py
